--- a/deskover-ecommerce-website/src/main/resources/application.properties
+++ b/deskover-ecommerce-website/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Cau hinh database
-spring.datasource.url=jdbc:mysql://localhost:3306/deskover-ecommerce
+spring.datasource.url=jdbc:mysql://localhost:3306/deskover
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=123456
