--- a/deskover-ecommerce-website/src/main/resources/application.properties
+++ b/deskover-ecommerce-website/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password=123456
 
 # Cau hinh JPA
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
