--- a/deskover-dashboard-website/angular.json
+++ b/deskover-dashboard-website/angular.json
@@ -138,7 +138,7 @@
       }
     }
   },
-  "defaultProject": "adminlte",
+  "defaultProject": "deskover-dashboard",
   "cli": {
     "analytics": "43a7ce40-5fb9-4a0d-8b40-b48fc0426e9d",
     "defaultCollection": "@angular-eslint/schematics"
