--- a/deskover-dashboard-website/angular.json
+++ b/deskover-dashboard-website/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "adminlte": {
+    "deskover-dashboard": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/adminlte",
+            "outputPath": "dist/deskover-dashboard",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -83,18 +83,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "adminlte:build"
+            "browserTarget": "deskover-dashboard:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "adminlte:build:production"
+              "browserTarget": "deskover-dashboard:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "adminlte:build"
+            "browserTarget": "deskover-dashboard:build"
           }
         },
         "test": {
@@ -127,11 +127,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "adminlte:serve"
+            "devServerTarget": "deskover-dashboard:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "adminlte:serve:production"
+              "devServerTarget": "deskover-dashboard:serve:production"
             }
           }
         }
