--- a/deskover-ecommerce-website/src/main/resources/application.properties
+++ b/deskover-ecommerce-website/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 # Disabling the Whitelabel Error Page
 server.error.whitelabel.enabled=false
 
+# App Properties
+jwtSecret=SecretKey
+jwtExpirationMs=86400000
+
 # Datasource Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/deskover
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
