--- a/deskover-ecommerce-website/src/main/resources/application.properties
+++ b/deskover-ecommerce-website/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/deskover
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=123456
+spring.datasource.password=root
 
 # Spring JPA Configuration
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
