--- a/deskover-ecommerce-website/src/main/resources/application.properties
+++ b/deskover-ecommerce-website/src/main/resources/application.properties
@@ -1,10 +1,9 @@
-# Disabling the Whitelabel Error Page
-server.error.whitelabel.enabled=false
-
-# App Properties
+# JWT Properties
 jwt.secret=SecretKey
 
+# Application Configuration
 spring.main.allow-circular-references=true
+server.error.whitelabel.enabled=false
 
 # Datasource Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/deskover
@@ -15,7 +14,7 @@ spring.datasource.password=123456
 # Spring JPA Configuration
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 # Thymeleaf Configuration
