--- a/deskover-dashboard-website/package.json
+++ b/deskover-dashboard-website/package.json
@@ -40,9 +40,10 @@
     "datatables.net-bs4": "^1.11.3",
     "datatables.net-colreorder": "^1.5.6",
     "datatables.net-colreorder-dt": "^1.5.6",
-    "gatekeeper-client-sdk": "^0.4.2",
+    "gatekeeper-client-sdk": "^0.3.0",
     "jquery": "^3.6.0",
     "luxon": "2.3.0",
+    "ngx-pagination": "^6.0.1",
     "ngx-toastr": "14.2.1",
     "process": "0.11.10",
     "rxjs": "6.6.7",
