--- a/deskover-dashboard-website/package.json
+++ b/deskover-dashboard-website/package.json
@@ -40,7 +40,9 @@
     "datatables.net": "^1.11.3",
     "datatables.net-bs4": "^1.11.3",
     "datatables.net-colreorder": "^1.5.6",
-    "datatables.net-colreorder-dt": "^1.5.6",
+    "datatables.net-colreorder-bs4": "^1.5.6",
+    "datatables.net-responsive": "^2.3.0",
+    "datatables.net-responsive-bs4": "^2.3.0",
     "gatekeeper-client-sdk": "^0.3.0",
     "jquery": "^3.6.0",
     "luxon": "2.3.0",
