--- a/deskover-ecommerce-website/src/main/resources/application.properties
+++ b/deskover-ecommerce-website/src/main/resources/application.properties
@@ -4,6 +4,7 @@ jwt.secret=SecretKey
 # Application Configuration
 spring.main.allow-circular-references=true
 server.error.whitelabel.enabled=false
+server.error.include-message=always
 
 # Datasource Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/deskover
