--- a/deskover-dashboard-website/angular.json
+++ b/deskover-dashboard-website/angular.json
@@ -34,7 +34,9 @@
               "node_modules/datatables.net/js/jquery.dataTables.min.js",
               "node_modules/datatables.net-bs4/js/dataTables.bootstrap4.min.js",
               "node_modules/datatables.net-responsive/js/dataTables.responsive.min.js",
-              "node_modules/datatables.net-responsive-bs4/js/responsive.bootstrap4.min.js"
+              "node_modules/datatables.net-responsive-bs4/js/responsive.bootstrap4.min.js",
+
+              "src/assets/fonts/fontawesome-pro/js/all.min.js"
             ],
             "vendorChunk": true,
             "extractLicenses": false,
