Migrate Bootstrap v4 to v5

--- a/deskover-dashboard-website/package.json
+++ b/deskover-dashboard-website/package.json
@@ -31,23 +31,19 @@
     "@angular/platform-browser": "13.2.0",
     "@angular/platform-browser-dynamic": "13.2.0",
     "@angular/router": "13.2.0",
-    "@ng-bootstrap/ng-bootstrap": "^11.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@ngrx/store": "13.0.2",
     "angular-datatables": "^13.0.1",
     "autoprefixer": "10.4.5",
-    "bootstrap": "^4.6.0",
+    "bootstrap": "^5.2.0-beta1",
     "core-js": "3.8.0",
     "datatables.net": "^1.11.3",
-    "datatables.net-bs4": "^1.11.3",
-    "datatables.net-colreorder": "^1.5.6",
-    "datatables.net-colreorder-bs4": "^1.5.6",
+    "datatables.net-bs5": "^1.12.1",
     "datatables.net-responsive": "^2.3.0",
-    "datatables.net-responsive-bs4": "^2.3.0",
-    "gatekeeper-client-sdk": "^0.3.0",
+    "datatables.net-responsive-bs5": "^2.3.0",
     "jquery": "^3.6.0",
     "luxon": "2.3.0",
     "ngx-bootstrap": "^8.0.0",
-    "ngx-pagination": "^6.0.1",
     "ngx-toastr": "14.2.1",
     "process": "0.11.10",
     "rxjs": "6.6.7",
