--- a/deskover-dashboard-website/package.json
+++ b/deskover-dashboard-website/package.json
@@ -31,6 +31,7 @@
     "@angular/platform-browser": "13.2.0",
     "@angular/platform-browser-dynamic": "13.2.0",
     "@angular/router": "13.2.0",
+    "@ckeditor/ckeditor5-angular": "^4.0.0",
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@ngrx/store": "13.0.2",
     "angular-datatables": "^13.0.1",
