--- a/deskover-dashboard-website/package.json
+++ b/deskover-dashboard-website/package.json
@@ -33,10 +33,11 @@
     "@angular/router": "14.0.5",
     "@ckeditor/ckeditor5-angular": "^4.0.0",
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
-    "@ngrx/store": "13.0.2",
+    "@ngrx/store": "14.0.1",
+    "@popperjs/core": "^2.11.5",
     "angular-datatables": "^13.0.1",
     "animate.css": "^4.1.1",
-    "autoprefixer": "10.4.5",
+    "autoprefixer": "^10.4.7",
     "bootstrap": "^5.2.0-beta1",
     "core-js": "3.8.0",
     "datatables.net": "^1.11.3",
