--- a/deskover-dashboard-website/package.json
+++ b/deskover-dashboard-website/package.json
@@ -32,6 +32,7 @@
     "@angular/platform-browser-dynamic": "14.0.5",
     "@angular/router": "14.0.5",
     "@ckeditor/ckeditor5-angular": "^4.0.0",
+    "@ckeditor/ckeditor5-build-classic": "^34.2.0",
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@ngrx/store": "14.0.1",
     "@popperjs/core": "^2.11.5",
