Update Product Management

--- a/deskover-dashboard-website/angular.json
+++ b/deskover-dashboard-website/angular.json
@@ -38,6 +38,11 @@
 
               "src/assets/fonts/fontawesome-pro/js/all.min.js"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/assets/scss"
+              ]
+            },
             "vendorChunk": true,
             "extractLicenses": false,
             "buildOptimizer": false,
