--- a/deskover-dashboard-website/package.json
+++ b/deskover-dashboard-website/package.json
@@ -32,7 +32,6 @@
     "@angular/platform-browser-dynamic": "14.0.5",
     "@angular/router": "14.0.5",
     "@ckeditor/ckeditor5-angular": "^4.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@ngrx/store": "14.0.1",
     "@popperjs/core": "^2.11.5",
     "angular-datatables": "^13.0.1",
@@ -47,6 +46,7 @@
     "jquery": "^3.6.0",
     "luxon": "2.3.0",
     "ngx-bootstrap": "^8.0.0",
+    "ngx-mask": "^14.0.3",
     "ngx-toastr": "14.2.1",
     "process": "0.11.10",
     "rxjs": "6.6.7",
