--- a/deskover-dashboard-website/package.json
+++ b/deskover-dashboard-website/package.json
@@ -47,6 +47,7 @@
     "luxon": "2.3.0",
     "ngx-bootstrap": "^8.0.0",
     "ngx-mask": "^14.0.3",
+    "ngx-spinner": "^14.0.0",
     "ngx-toastr": "14.2.1",
     "process": "0.11.10",
     "rxjs": "6.6.7",
