--- a/deskover-dashboard-website/angular.json
+++ b/deskover-dashboard-website/angular.json
@@ -35,6 +35,7 @@
               "node_modules/datatables.net-bs5/js/dataTables.bootstrap5.min.js",
               "node_modules/datatables.net-responsive/js/dataTables.responsive.min.js",
               "node_modules/datatables.net-responsive-bs5/js/responsive.bootstrap5.min.js",
+              "node_modules/notiflix/dist/notiflix-aio-3.2.5.min.js",
 
               "src/assets/fonts/fontawesome-pro/js/all.min.js"
             ],
@@ -55,7 +56,8 @@
               "os",
               "fs",
               "luxon",
-              "sweetalert2"
+              "sweetalert2",
+              "notiflix"
             ]
           },
           "configurations": {
