--- a/deskover-ecommerce-website/src/main/resources/application.properties
+++ b/deskover-ecommerce-website/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 ### JWT Properties
 jwt.secret=SecretKey
 
+### Tomcat
+server.tomcat.additional-tld-skip-patterns=*.jar
+
 ### Application Configuration
 spring.main.allow-circular-references=true
 server.error.whitelabel.enabled=false
