--- a/deskover-dashboard-website/package.json
+++ b/deskover-dashboard-website/package.json
@@ -49,6 +49,7 @@
     "ngx-mask": "^14.0.3",
     "ngx-toastr": "14.2.1",
     "notiflix": "^3.2.5",
+    "object-to-formdata": "^4.4.2",
     "process": "0.11.10",
     "rxjs": "6.6.7",
     "tslib": "2.0.3",
