--- a/deskover-dashboard-website/package.json
+++ b/deskover-dashboard-website/package.json
@@ -22,32 +22,28 @@
     }
   },
   "dependencies": {
-    "@angular/animations": "14.0.5",
-    "@angular/common": "14.0.5",
-    "@angular/compiler": "14.0.5",
-    "@angular/core": "14.0.5",
-    "@angular/forms": "14.0.5",
-    "@angular/localize": "14.0.5",
-    "@angular/platform-browser": "14.0.5",
-    "@angular/platform-browser-dynamic": "14.0.5",
-    "@angular/router": "14.0.5",
+    "@angular/common": "14.0.6",
+    "@angular/compiler": "14.0.6",
+    "@angular/core": "14.0.6",
+    "@angular/localize": "14.0.6",
+    "@angular/platform-browser": "14.0.6",
+    "@angular/platform-browser-dynamic": "14.0.6",
+    "@angular/router": "14.0.6",
     "@ckeditor/ckeditor5-angular": "^4.0.0",
     "@ngrx/store": "14.0.1",
     "@popperjs/core": "^2.11.5",
-    "angular-datatables": "^13.0.1",
+    "angular-datatables": "^14.0.0",
     "animate.css": "^4.1.1",
-    "autoprefixer": "^10.4.5",
+    "autoprefixer": "^10.4.7",
     "bootstrap": "^5.2.0-beta1",
     "core-js": "3.8.0",
     "datatables.net": "^1.11.3",
     "datatables.net-bs5": "^1.12.1",
-    "datatables.net-responsive": "^2.3.0",
     "datatables.net-responsive-bs5": "^2.3.0",
     "jquery": "^3.6.0",
-    "luxon": "2.3.0",
+    "luxon": "^3.0.1",
     "ngx-bootstrap": "^8.0.0",
     "ngx-mask": "^14.0.3",
-    "ngx-toastr": "14.2.1",
     "notiflix": "^3.2.5",
     "object-to-formdata": "^4.4.2",
     "process": "0.11.10",
@@ -58,14 +54,14 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "14.0.5",
-    "@angular-eslint/builder": "14.0.1",
-    "@angular-eslint/eslint-plugin": "14.0.1",
-    "@angular-eslint/eslint-plugin-template": "14.0.1",
-    "@angular-eslint/schematics": "14.0.1",
-    "@angular-eslint/template-parser": "14.0.1",
+    "@angular-eslint/builder": "14.0.2",
+    "@angular-eslint/eslint-plugin": "14.0.2",
+    "@angular-eslint/eslint-plugin-template": "14.0.2",
+    "@angular-eslint/schematics": "14.0.2",
+    "@angular-eslint/template-parser": "14.0.2",
     "@angular/cli": "^14.0.5",
-    "@angular/compiler-cli": "14.0.5",
-    "@angular/language-service": "14.0.5",
+    "@angular/compiler-cli": "14.0.6",
+    "@angular/language-service": "14.0.6",
     "@types/datatables.net": "^1.10.21",
     "@types/jasmine": "~3.6.2",
     "@types/jasminewd2": "2.0.8",
