--- a/deskover-dashboard-website/package.json
+++ b/deskover-dashboard-website/package.json
@@ -22,13 +22,13 @@
     }
   },
   "dependencies": {
-    "@angular/common": "14.0.6",
-    "@angular/compiler": "14.0.6",
-    "@angular/core": "14.0.6",
-    "@angular/localize": "14.0.6",
-    "@angular/platform-browser": "14.0.6",
-    "@angular/platform-browser-dynamic": "14.0.6",
-    "@angular/router": "14.0.6",
+    "@angular/common": "14.1.0",
+    "@angular/compiler": "14.1.0",
+    "@angular/core": "14.1.0",
+    "@angular/localize": "14.1.0",
+    "@angular/platform-browser": "14.1.0",
+    "@angular/platform-browser-dynamic": "14.1.0",
+    "@angular/router": "14.1.0",
     "@ckeditor/ckeditor5-angular": "^4.0.0",
     "@ngrx/store": "14.0.2",
     "@popperjs/core": "^2.11.5",
@@ -42,7 +42,7 @@
     "datatables.net-responsive-bs5": "^2.3.0",
     "jquery": "^3.6.0",
     "luxon": "^3.0.1",
-    "ngx-bootstrap": "^8.0.0",
+    "ngx-bootstrap": "^9.0.0-RC.2",
     "ngx-mask": "^14.0.3",
     "notiflix": "^3.2.5",
     "object-to-formdata": "^4.4.2",
@@ -53,15 +53,15 @@
     "zone.js": "~0.11.6"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "14.0.6",
+    "@angular-devkit/build-angular": "14.1.0",
     "@angular-eslint/builder": "14.0.2",
     "@angular-eslint/eslint-plugin": "14.0.2",
     "@angular-eslint/eslint-plugin-template": "14.0.2",
     "@angular-eslint/schematics": "14.0.2",
     "@angular-eslint/template-parser": "14.0.2",
-    "@angular/cli": "^14.0.6",
-    "@angular/compiler-cli": "14.0.6",
-    "@angular/language-service": "14.0.6",
+    "@angular/cli": "^14.1.0",
+    "@angular/compiler-cli": "14.1.0",
+    "@angular/language-service": "14.1.0",
     "@types/datatables.net": "^1.10.23",
     "@types/jasmine": "~4.0.3",
     "@types/jasminewd2": "2.0.10",
