--- a/deskover-dashboard-website/package.json
+++ b/deskover-dashboard-website/package.json
@@ -34,7 +34,7 @@
     "@popperjs/core": "^2.11.5",
     "angular-datatables": "^14.0.0",
     "animate.css": "^4.1.1",
-    "autoprefixer": "^10.4.7",
+    "autoprefixer": "10.4.5",
     "bootstrap": "^5.2.0",
     "core-js": "3.23.5",
     "datatables.net": "^1.12.1",
