--- a/deskover-ecommerce-website/src/main/resources/application.properties
+++ b/deskover-ecommerce-website/src/main/resources/application.properties
@@ -33,4 +33,4 @@ spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.max-file-size=1MB
 spring.servlet.multipart.max-request-size=1MB
 
-spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+#spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
