--- a/deskover-ecommerce-website/src/main/resources/application.properties
+++ b/deskover-ecommerce-website/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.datasource.password=123456
 ### Spring JPA Configuration
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 ### Thymeleaf Configuration
@@ -33,4 +33,4 @@ spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.max-file-size=1MB
 spring.servlet.multipart.max-request-size=1MB
 
-spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+#spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
