--- a/deskover-ecommerce-website/src/main/resources/application.properties
+++ b/deskover-ecommerce-website/src/main/resources/application.properties
@@ -5,6 +5,7 @@ jwt.secret=SecretKey
 spring.main.allow-circular-references=true
 server.error.whitelabel.enabled=false
 server.error.include-message=always
+#spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 
 ### Datasource Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/deskover
@@ -33,4 +34,11 @@ spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.max-file-size=1MB
 spring.servlet.multipart.max-request-size=1MB
 
-#spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+# Email Config
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=deskover.store@gmail.com
+spring.mail.password=aobvgobxyutkrfwp
+spring.mail.properties.mail.smpt.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
