--- a/deskover-dashboard-website/package.json
+++ b/deskover-dashboard-website/package.json
@@ -30,12 +30,13 @@
     "@angular/platform-browser": "14.1.1",
     "@angular/platform-browser-dynamic": "14.1.1",
     "@angular/router": "14.1.1",
-    "@ngrx/store": "14.0.2",
+    "@ngrx/store": "14.1.0",
     "@popperjs/core": "^2.11.5",
     "angular-datatables": "^14.0.0",
     "animate.css": "^4.1.1",
-    "autoprefixer": "^10.4.8",
+    "autoprefixer": "^10.4.5",
     "bootstrap": "^5.2.0",
+    "chart.js": "^3.9.1",
     "ckeditor4-angular": "^3.1.1",
     "core-js": "3.24.1",
     "datatables.net": "^1.12.1",
@@ -43,6 +44,7 @@
     "datatables.net-responsive-bs5": "^2.3.0",
     "jquery": "^3.6.0",
     "luxon": "^3.0.1",
+    "ng2-charts": "^4.0.0",
     "ngx-bootstrap": "^9.0.0",
     "ngx-mask": "^14.0.3",
     "notiflix": "^3.2.5",
@@ -67,9 +69,9 @@
     "@types/jasmine": "~4.0.3",
     "@types/jasminewd2": "2.0.10",
     "@types/jquery": "^3.5.14",
-    "@types/node": "18.6.4",
-    "@typescript-eslint/eslint-plugin": "5.32.0",
-    "@typescript-eslint/parser": "5.32.0",
+    "@types/node": "18.6.5",
+    "@typescript-eslint/eslint-plugin": "5.33.0",
+    "@typescript-eslint/parser": "5.33.0",
     "admin-lte": "3.2.0",
     "angular-cli-ghpages": "^1.0.3",
     "eslint": "8.21.0",
