login Google and register Google

--- a/deskover-ecommerce-website/src/main/resources/application.properties
+++ b/deskover-ecommerce-website/src/main/resources/application.properties
@@ -42,3 +42,7 @@ spring.mail.password=omgrrfhhmdzkqklo
 spring.mail.properties.mail.smpt.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
+
+# Google 
+spring.security.oauth2.client.registration.google.client-id=277753708766-d2gdlq7adkmeh3hdigr9teiavht50tti.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
