--- a/deskover-ecommerce-website/pom.xml
+++ b/deskover-ecommerce-website/pom.xml
@@ -137,6 +137,15 @@
 		    <groupId>org.springframework</groupId>
 		    <artifactId>spring-test</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
+		<dependency>
+		  <groupId>com.twilio.sdk</groupId>
+		  <artifactId>twilio</artifactId>
+		  <version>8.13.0</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
