--- a/deskover-ecommerce-website/src/main/resources/application.properties
+++ b/deskover-ecommerce-website/src/main/resources/application.properties
@@ -8,14 +8,14 @@ server.error.include-message=always
 #spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 
 ### Datasource Configuration
-#spring.datasource.url=jdbc:mysql://localhost/deskover
-#spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-#spring.datasource.username=root
-#spring.datasource.password=123456
-spring.datasource.url=jdbc:mysql://103.74.122.58/deskover?useSSL=false&autoReconnect=true&useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost/deskover
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.username=admin
-spring.datasource.password=Admin@123
+spring.datasource.username=root
+spring.datasource.password=123456
+#spring.datasource.url=jdbc:mysql://103.74.122.58/deskover?useSSL=false&autoReconnect=true&useUnicode=yes&characterEncoding=UTF-8
+#spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+#spring.datasource.username=admin
+#spring.datasource.password=Admin@123
 
 ### Spring JPA Configuration
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
