--- a/deskover-dashboard-website/package.json
+++ b/deskover-dashboard-website/package.json
@@ -23,22 +23,23 @@
     }
   },
   "dependencies": {
-    "@angular/common": "14.1.1",
-    "@angular/compiler": "14.1.1",
-    "@angular/core": "14.1.1",
-    "@angular/localize": "14.1.1",
-    "@angular/platform-browser": "14.1.1",
-    "@angular/platform-browser-dynamic": "14.1.1",
-    "@angular/router": "14.1.1",
-    "@ngrx/store": "14.1.0",
-    "@popperjs/core": "^2.11.5",
+    "@angular/common": "14.2.0",
+    "@angular/compiler": "14.2.0",
+    "@angular/core": "14.2.0",
+    "@angular/localize": "14.2.0",
+    "@angular/platform-browser": "14.2.0",
+    "@angular/platform-browser-dynamic": "14.2.0",
+    "@angular/router": "14.2.0",
+    "@ngrx/store": "14.3.0",
+    "@popperjs/core": "^2.11.6",
     "angular-datatables": "^14.0.0",
     "animate.css": "^4.1.1",
-    "autoprefixer": "^10.4.5",
+    "autoprefixer": "10.4.5",
     "bootstrap": "^5.2.0",
     "chart.js": "^3.9.1",
+    "chartjs-plugin-datalabels": "^2.1.0",
     "ckeditor4-angular": "^3.1.1",
-    "core-js": "3.24.1",
+    "core-js": "3.25.0",
     "datatables.net": "^1.12.1",
     "datatables.net-bs5": "^1.12.1",
     "datatables.net-responsive-bs5": "^2.3.0",
@@ -53,28 +54,28 @@
     "rxjs": "7.5.6",
     "tslib": "2.4.0",
     "uuid": "^8.3.2",
-    "zone.js": "~0.11.7"
+    "zone.js": "~0.11.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "14.1.1",
-    "@angular-eslint/builder": "14.0.2",
-    "@angular-eslint/eslint-plugin": "14.0.2",
-    "@angular-eslint/eslint-plugin-template": "14.0.2",
-    "@angular-eslint/schematics": "14.0.2",
-    "@angular-eslint/template-parser": "14.0.2",
-    "@angular/cli": "^14.1.1",
-    "@angular/compiler-cli": "14.1.1",
-    "@angular/language-service": "14.1.1",
+    "@angular-devkit/build-angular": "14.2.0",
+    "@angular-eslint/builder": "14.0.3",
+    "@angular-eslint/eslint-plugin": "14.0.3",
+    "@angular-eslint/eslint-plugin-template": "14.0.3",
+    "@angular-eslint/schematics": "14.0.3",
+    "@angular-eslint/template-parser": "14.0.3",
+    "@angular/cli": "^14.2.0",
+    "@angular/compiler-cli": "14.2.0",
+    "@angular/language-service": "14.2.0",
     "@types/datatables.net": "^1.10.23",
-    "@types/jasmine": "~4.0.3",
+    "@types/jasmine": "~4.3.0",
     "@types/jasminewd2": "2.0.10",
     "@types/jquery": "^3.5.14",
-    "@types/node": "18.6.5",
-    "@typescript-eslint/eslint-plugin": "5.33.0",
-    "@typescript-eslint/parser": "5.33.0",
+    "@types/node": "^18.7.13",
+    "@typescript-eslint/eslint-plugin": "5.35.1",
+    "@typescript-eslint/parser": "5.35.1",
     "admin-lte": "3.2.0",
     "angular-cli-ghpages": "^1.0.3",
-    "eslint": "8.21.0",
+    "eslint": "8.22.0",
     "fs-web": "1.0.1",
     "husky": "8.0.1",
     "jasmine-core": "~4.3.0",
@@ -93,6 +94,6 @@
     "ts-node": "10.9.1",
     "tslint-config-prettier": "1.18.0",
     "tslint-plugin-prettier": "2.3.0",
-    "typescript": "4.7.4"
+    "typescript": "^4.7.4"
   }
 }
